fix: Fix the gap between title and description

--- a/src/components/NoQuestsContent/index.module.scss
+++ b/src/components/NoQuestsContent/index.module.scss
@@ -18,7 +18,6 @@
   @extend .title;
 
   margin-top: var(--space-lg);
-  margin-bottom: var(--space-xs);
 }
 
 .description {
